--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 
-   <!-- MAIN CONTENT FOR ADD PAGE -->
+   <!-- MAIN CONTENT FOR ADD and EDIT PAGE -->
    <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
