--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -40,6 +40,13 @@
             <li><a href="/books"><i class="fa fa-book fa-lg">
             </i> Books List</a></li>
           <% } %>
+          <!--Updated Login, logout and display name-->
+           <% if(typeof displayName == 'string' && displayName) { %>
+                <li class="navbar-text"><i class="fa fa-user fa-lg"></i> Welcome  <%= displayName %></li>
+                <li class="nav-item"><a class="nav-link" href="/logout"><i class="fa fa-sign-out fa-lg"></i> Logout</a></li>
+            <% } else { %>
+            <li class="nav-item"><a class="nav-link" href="/login"><i class="fa fa-sign-in fa-lg"></i> Login</a></li>
+            <% } %>
 
       </ul>
     </div><!-- /.navbar-collapse -->
